2005-08-03  Ulrich Drepper  <drepper@redhat.com>

	* libebl_alpha.map: Remove unnecessary exports.
	* libebl_arm.map: Likewise.
	* libebl_i386.map: Likewise.
	* libebl_ia64.map: Likewise.
	* libebl_ppc.map: Likewise.
	* libebl_ppc64.map: Likewise.
	* libebl_sh.map: Likewise.
	* libebl_sparc.map: Likewise.
	* libebl_x86_64.map: Likewise.

2005-08-02  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (libebl_a_SOURCES): Add eblelfclass.c, eblelfdata.c,
	and eblelfmachine.c.
	* elbopenbackend.c (machines): Add class and data fields.  Initialize
	them.
	(ebl_openbackend): Initialize machine, class, data fields in result.
	* libebl.h: Declare Add eblelfclass, eblelfdata, and eblelfmachine.
	* libeblP.h (Ebl): Add machine, class, data fields.

2005-07-23  Ulrich Drepper  <drepper@redhat.com>

	* eblsectionstripp.c: New file.
	* Makefile.am (gen_SOURCES): Add eblsectionstripp.c.
	* i386_init.c (i386_init): Install specific debugscn_p callback.
	* i386_symbol.c (i386_debugscn_p): New function.
	* libebl.h: Declare ebl_section_strip_p.
	* libebl_i386.h: Declare i386_debugscn_p.

	* libebl.h: Move Ebl definition to...
	* libeblP.h: ...here.

2005-07-21  Roland McGrath  <roland@redhat.com>

	* Makefile.am (install-ebl-modules): New target, commands from ...
	(install): ... here.  Make this depend on it.
	(LIBEBL_SUBDIR): New variable, substituted by configure.
	(install-ebl-modules): Install in $(libdir)/$(LIBEBL_SUBDIR).
	* eblopenbackend.c (openbackend): Use LIBEBL_SUBDIR in module name.

2005-07-21  Ulrich Drepper  <drepper@redhat.com>

	* eblcopyrelocp.c: New file.
	* Makefile.am (gen_SOURCES): Add eblcopyrelocp.c.
	* libebl.h: Declare ebl_copy_reloc_p.
	* eblopenbackend.c (fill_defaults): Fill in copy_reloc_p.
	(default_copy_reloc_p): New function.
	* alpha_init.c: Define and use arch-specific copy_reloc_p function.
	* alpha_symbol.c: Likewise.
	* arm_init.c: Likewise.
	* arm_symbol.c: Likewise.
	* i386_init.c: Likewise.
	* i386_symbol.c: Likewise.