@@ -34,6 +34,8 @@ alpha_init (elf, machine, eh, ehlen)
   eh->name = "Alpha";
   eh->reloc_type_name = alpha_reloc_type_name;
   eh->reloc_type_check = alpha_reloc_type_check;
+  eh->dynamic_tag_name = alpha_dynamic_tag_name;
+  eh->dynamic_tag_check = alpha_dynamic_tag_check;
   eh->copy_reloc_p = alpha_copy_reloc_p;
   eh->destr = alpha_destr;
 
